--- a/02-dtmoney/public/index.html
+++ b/02-dtmoney/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+
     <title>DT Money</title>
   </head>
   <body>
